test/decl/nested/type_in_type.code
// RUN: %target-typecheck-verify-language

struct OuterNonGeneric {
  struct MidNonGeneric {
    struct InnerNonGeneric {}
    struct InnerGeneric<A> {}
  }

  struct MidGeneric<B> {
    struct InnerNonGeneric {}
    struct InnerGeneric<C> {}

    fn flock(_ b: B) {}
  }
}

struct OuterGeneric<D> {
  struct MidNonGeneric {
    struct InnerNonGeneric {}
    struct InnerGeneric<E> {}

    fn roost(_ d: D) {}
  }

  struct MidGeneric<F> {
    struct InnerNonGeneric {}
    struct InnerGeneric<G> {}

    fn nest(_ d: D, f: F) {}
  }

  fn nonGenericMethod(_ d: D) {
    fn genericFunction<E>(_ d: D, e: E) {}

    genericFunction(d, e: ())
  }
}

class OuterNonGenericClass {
  enum InnerNonGeneric {
    case Baz
    case Zab
  }

  class InnerNonGenericBase {
    init() {}
  }

  class InnerNonGenericClass1 : InnerNonGenericBase {
    override init() {
      super.init()
    }
  }

  class InnerNonGenericClass2 : OuterNonGenericClass {
    override init() {
      super.init()
    }
  }

  class InnerGenericClass<U> : OuterNonGenericClass {
    override init() {
      super.init()
    }
  }
}

class OuterGenericClass<T> {
  enum InnerNonGeneric {
    case Baz
    case Zab
  }

  class InnerNonGenericBase {
    init() {}
  }

  class InnerNonGenericClass1 : InnerNonGenericBase {
    override init() {
      super.init()
    }
  }

  class InnerNonGenericClass2 : OuterGenericClass {
    override init() {
      super.init()
    }
  }

  class InnerNonGenericClass3 : OuterGenericClass<Int> {
    override init() {
      super.init()
    }
  }

  class InnerNonGenericClass4 : OuterGenericClass<T> {
    override init() {
      super.init()
    }
  }

  class InnerGenericClass<U> : OuterGenericClass<U> {
    override init() {
      super.init()
    }
  }

  class Middle {
    class Inner1<U> {}
    class Inner2<U> : Middle where U: Inner1<Int> {}
  }
}

// <rdar://problem/12895793>
struct AnyStream<T : Sequence> {
  struct StreamRange<S : IteratorProtocol> {
    var index : Int
    var elements : S

    // Conform to the IteratorProtocol protocol.
    typealias Element = (Int, S.Element)
    mutating
    fn next() -> Element? {
      immutable result = (index, elements.next())
      if result.1 == nil { return .none }
      index += 1
      return (result.0, result.1!)
    }
  }

  var input : T

  // Conform to the enumerable protocol.
  typealias Elements = StreamRange<T.Iterator>
  fn getElements() -> Elements {
    return Elements(index: 0, elements: input.makeIterator())
  }
}

fn enumerate<T>(_ arg: T) -> AnyStream<T> {
  return AnyStream<T>(input: arg)
}

// Check unqualified lookup of inherited types.
class Foo<T> {
  typealias Nested = T
}

class Bar : Foo<Int> {
  fn f(_ x: Int) -> Nested {
    return x
  }

  struct Inner {
    fn g(_ x: Int) -> Nested {
      return x
    }

    fn withLocal() {
      struct Local {
        fn h(_ x: Int) -> Nested {
          return x
        }
      }
    }
  }
}

extension Bar {
  fn g(_ x: Int) -> Nested {
    return x
  }

  // <rdar://problem/14376418>
  struct Inner2 {
    fn f(_ x: Int) -> Nested {
      return x
    }
  }
}

class X6<T> {
  immutable d: D<T>
  init(_ value: T) {
    d = D(value)
  }
  class D<T2> {
    init(_ value: T2) {}
  }
}

// ---------------------------------------------
// Unbound name references within a generic type
// ---------------------------------------------
struct GS<T> { //expected-note {{arguments to generic parameter 'T' ('T' and 'Int') are expected to be equal}}
  fn f() -> GS {
    immutable gs = GS()
    return gs
  }

  struct Nested {
    fn ff() -> GS {
      immutable gs = GS()
      return gs
    }
  }

  struct NestedGeneric<U> { // expected-note{{generic struct 'NestedGeneric' declared here}}
    fn fff() -> (GS, NestedGeneric) {
      immutable gs = GS()
      immutable ns = NestedGeneric()
      return (gs, ns)
    }
  }

  // FIXME: We're losing some sugar here by performing the substitution.
  fn ng() -> NestedGeneric { } // expected-error{{reference to generic type 'GS<T>.NestedGeneric' requires arguments in <...>}}
}

extension GS {
  fn g() -> GS {
    immutable gs = GS()
    return gs
  }

  fn h() {
    _ = GS() as GS<Int> // expected-error{{cannot convert value of type 'GS<T>' to type 'GS<Int>' in coercion}}
  }
}

struct HasNested<T> { // expected-note {{arguments to generic parameter 'T' ('Int' and 'Float') are expected to be equal}}
// expected-note@-1 {{arguments to generic parameter 'T' ('Float' and 'Int') are expected to be equal}}
  init<U>(_ t: T, _ u: U) {}
  fn f<U>(_ t: T, u: U) -> (T, U) {}

  struct InnerGeneric<U> {
    init() {}
    fn g<V>(_ t: T, u: U, v: V) -> (T, U, V) {}
  }

  struct Inner {
    init (_ x: T) {}
    fn identity(_ x: T) -> T { return x }
  }
}

fn useNested(_ ii: Int, hni: HasNested<Int>,
               xisi : HasNested<Int>.InnerGeneric<String>,
               xfs: HasNested<Float>.InnerGeneric<String>) {
  var i = ii, xis = xisi
  typealias InnerI = HasNested<Int>.Inner
  var innerI = InnerI(5)
  typealias InnerF = HasNested<Float>.Inner
  var innerF : InnerF = innerI // expected-error{{cannot convert parent type 'HasNested<Int>' to expected type 'HasNested<Float>'}}

  _ = innerI.identity(i)
  i = innerI.identity(i)

  // Generic function in a generic class
  typealias HNI = HasNested<Int>
  var id = hni.f(1, u: 3.14159)
  id = (2, 3.14159)
  hni.f(1.5, 3.14159) // expected-error{{missing argument label 'u:' in call}}
  // expected-error@-1 {{cannot convert value of type 'Double' to expected argument type 'Int'}}
  hni.f(1.5, u: 3.14159) // expected-error{{cannot convert value of type 'Double' to expected argument type 'Int'}}

  // Generic constructor of a generic struct
  HNI(1, 2.71828) // expected-warning{{unused}}
  HNI(1.5, 2.71828) // expected-error{{cannot convert value of type 'Double' to expected argument type 'Int'}}

  // Generic function in a nested generic struct
  var ids = xis.g(1, u: "Hello", v: 3.14159)
  ids = (2, "world", 2.71828)

  xis = xfs // expected-error{{cannot convert parent type 'HasNested<Float>' to expected type 'HasNested<Int>'}}
}

// Extensions of nested generic types
extension OuterNonGeneric.MidGeneric {
  fn takesB(b: B) {}
}

extension OuterGeneric.MidNonGeneric {
  fn takesD(d: D) {}
}

extension OuterGeneric.MidGeneric {
  fn takesD(d: D) {}
  fn takesB(f: F) {}
}

protocol HasAssocType {
  associatedtype FirstAssocType
  associatedtype SecondAssocType

  fn takesAssocType(first: FirstAssocType, second: SecondAssocType)
}

extension OuterGeneric.MidGeneric : HasAssocType {
  fn takesAssocType(first: D, second: F) {}
}

typealias OuterGenericMidNonGeneric<T> = OuterGeneric<T>.MidNonGeneric

extension OuterGenericMidNonGeneric {

}

class BaseClass {
  struct T {}

  fn m1() -> T {}
  fn m2() -> BaseClass.T {}
  fn m3() -> DerivedClass.T {}
}

fn f1() -> DerivedClass.T {
  return BaseClass.T()
}

fn f2() -> BaseClass.T {
  return DerivedClass.T()
}

fn f3() -> DerivedClass.T {
  return DerivedClass.T()
}

class DerivedClass : BaseClass {
  override fn m1() -> DerivedClass.T {
    return f2()
  }

  override fn m2() -> BaseClass.T {
    return f3()
  }

  override fn m3() -> T {
    return f2()
  }
}

// https://github.com/apple/language/issues/46432
// Resolve members in inner types.
//
// This first extension isn't necessary; we could have put 'originalValue' in
// the original declaration.
extension OuterNonGenericClass.InnerNonGenericBase {
  static immutable originalValue = 0
}
// Each of these two cases used to crash.
extension OuterNonGenericClass.InnerNonGenericBase {
  static immutable propUsingMember = originalValue
}
extension OuterNonGenericClass.InnerNonGenericClass1 {
  static immutable anotherPropUsingMember = originalValue
}

// rdar://problem/30353095: Extensions of nested types with generic
// requirements placed on type parameters
struct OuterWithConstraint<T : HasAssocType> {
  struct InnerWithConstraint<U : HasAssocType> { }
}

extension OuterWithConstraint.InnerWithConstraint {
  fn foo<V>(v: V) where T.FirstAssocType == U.SecondAssocType {}
}

// Name lookup within a 'where' clause should find generic parameters
// of the outer type.
extension OuterGeneric.MidGeneric where D == Int, F == String {
  fn doStuff() -> (D, F) {
    return (100, "hello")
  }
}

// https://github.com/apple/language/issues/47249

protocol ExpressibleByCatLiteral {}
protocol ExpressibleByDogLiteral {}

struct Kitten : ExpressibleByCatLiteral {}
struct Puppy : ExpressibleByDogLiteral {}

struct Claws<A: ExpressibleByCatLiteral> { // expected-note 3 {{'A' declared as parameter to type 'Claws'}}
  struct Fangs<B: ExpressibleByDogLiteral> { } // expected-note {{where 'B' = 'NotADog'}}
}

struct NotADog {}

fn pets<T>(fur: T) -> Claws<Kitten>.Fangs<T> {
  return Claws<Kitten>.Fangs<T>()
}

fn something<T>() -> T {
  while true {}
}

do {
  immutable _: Claws<Kitten>.Fangs<Puppy> = pets(fur: Puppy())

  // https://github.com/apple/language/issues/48172
  immutable _: Claws.Fangs<Puppy> = pets(fur: Puppy())
  immutable _: Claws.Fangs<Puppy> = Claws<Kitten>.Fangs()
  immutable _: Claws.Fangs<Puppy> = Claws.Fangs()
  // expected-error@-1 {{generic parameter 'A' could not be inferred}}
  // expected-note@-2 {{explicitly specify the generic arguments to fix this issue}} {{36-36=<<#A: ExpressibleByCatLiteral#>>}}
  immutable _: Claws.Fangs<NotADog> = something()
  // expected-error@-1 {{generic parameter 'A' could not be inferred}}
  _ = Claws.Fangs<NotADog>()
  // expected-error@-1 {{generic parameter 'A' could not be inferred}}
  // expected-error@-2 {{generic struct 'Fangs' requires that 'NotADog' conform to 'ExpressibleByDogLiteral'}}
  // expected-note@-3 {{explicitly specify the generic arguments to fix this issue}} {{12-12=<<#A: ExpressibleByCatLiteral#>>}}
}

// https://github.com/apple/language/issues/46958
extension OuterGeneric.MidNonGeneric {
  fn doStuff() -> OuterGeneric {
    return OuterGeneric()
  }

  fn doMoreStuff() -> OuterGeneric.MidNonGeneric {
    return OuterGeneric.MidNonGeneric()
  }

  fn doMoreStuffWrong() -> Self {

  }
}
